Overflow fixed and socials removed

--- a/login_for_free.css
+++ b/login_for_free.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     justify-content: center;
     width: 100%;
+    height: 100vh;
     
 }
 
@@ -205,6 +206,18 @@ form{
 
 }
 
+.fullname{
+    width: 95%;
+
+    display: flex;
+    flex-direction: row;
+
+}
+
+.fname{
+    margin-right: 40px;
+
+}
 @media (max-width: 768px) {
     .illustration-section {
         display: none;
